update: param type,start,end_date for manga list
